# UAO-Neumonia-Proyecto-1

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-gui  LICENSE  README.md  detector_neumonia.py  pyproject.toml  requirements.txt  web.py
src/: grad_cam.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
tests/: test_dummy.py  test_grad_cam.py  test_load_model.py  test_preprocess_img.py  test_read_img.py
